--- a/blog/api/package.json
+++ b/blog/api/package.json
@@ -15,6 +15,10 @@
   },
   "scripts": {
     "start": "nodemon index.js"
+    
+  },
+  "engines": {
+    "node": ">=10"
   },
   "author": "Orion Palmer",
   "license": "ISC",
