--- a/blog/client/package.json
+++ b/blog/client/package.json
@@ -10,8 +10,11 @@
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.8",
+    "styled-components": "^4.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
